--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<parent>
-		<groupId>nz.ac.auckland</groupId>
-		<artifactId>uoa-parent</artifactId>
-		<version>1.8</version>
+		<groupId>nz.ac.auckland.groupapps.parent</groupId>
+		<artifactId>parent-groupapps-central</artifactId>
+		<version>1.1</version>
 	</parent>
 	
 	<groupId>nz.ac.auckland.composite</groupId>
@@ -21,6 +21,12 @@
 	<properties>
 		<spring.version>3.2.1.RELEASE</spring.version>
 	</properties>
+	
+	<scm>
+		<url>https://github.com/uoa-group-applications/composite-spring-test</url>
+		<connection>scm:git:https://github.com/uoa-group-applications/composite-spring-test.git</connection>
+		<developerConnection>scm:git:git@github.com:uoa-group-applications/composite-spring-test.git</developerConnection>
+	</scm>
 	
 	<dependencies>
 	
